Bug 17727 – [mgtlibrary] New Please Note text is truncated after Subsequent. r=mook
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@14713 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/preferences.css
+++ b/app/skin/dialogs/preferences.css
@@ -116,10 +116,6 @@ listheader
   display: -moz-groupbox;
 }
 
-#manage_media_format_dir_formatter > hbox,
-#manage_media_format_file_formatter > hbox {
-  min-height: 5em;
-}
 #manage_media_format_dir_file .fileFieldLabel,
 #manage_media_format_dir_formatter > hbox > vbox > textbox {
   background: none;
